distros/N/Net-Amazon-S3/lib/Shared/Examples/Net/Amazon/S3/Fixture/error/http_bad_request.pm
# PODNAME: Shared::Examples::Net::Amazon::S3::Fixture::error::http_bad_request
# ABSTRACT: Shared::Examples providing error fixture

use strict;
use warnings;

use HTTP::Status;
use Shared::Examples::Net::Amazon::S3::Fixture;

+{
	response_code  => HTTP::Status::HTTP_BAD_REQUEST,
};

__END__

=pod

=encoding UTF-8

=head1 NAME

Shared::Examples::Net::Amazon::S3::Fixture::error::http_bad_request - Shared::Examples providing error fixture

=head1 VERSION

version 0.98

=head1 AUTHOR

Branislav Zahradník <barney@cpan.org>

=head1 COPYRIGHT AND LICENSE

This software is copyright (c) 2021 by Amazon Digital Services, Leon Brocard, Brad Fitzpatrick, Pedro Figueiredo, Rusty Conover, Branislav Zahradník.

This is free software; you can redistribute it and/or modify it under
the same terms as the Perl 5 programming language system itself.

=cut
